// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Swatch 1`] = `
.c0 {
  width: 36px;
  height: 36px;
  border-color: #DEE1E5;
  background-color: white;
  margin-top: auto;
}

.c0:hover {
  border-color: #C1C6CC;
}

<div
  className="c0"
  color="white"
  height="36px"
  width="36px"
/>
`;

exports[`Swatch with hex value passed 1`] = `
.c0 {
  width: 36px;
  height: 36px;
  border-color: #DEE1E5;
  background-color: #4c6670;
  margin-top: auto;
}

.c0:hover {
  border-color: #C1C6CC;
}

<div
  className="c0"
  color="#4c6670"
  height="36px"
  width="36px"
/>
`;

exports[`Swatch with width and height set 1`] = `
.c0 {
  width: 50px;
  height: 25px;
  border-color: #DEE1E5;
  background-color: blue;
  margin-top: auto;
}

.c0:hover {
  border-color: #C1C6CC;
}

<div
  className="c0"
  color="blue"
  height="25px"
  width="50px"
/>
`;
